# papy

./: .gitignore  CHANGELOG.md  Makefile  README.md  USER_GUIDE.md  platformio.ini
docs/: architecture.md  calibre.md  customization.md  device-specifications.md  example.theme  file-formats.md  fonts.md  images.md  rendering-pipeline.md  user_guide.md  webserver.md
docs/examples/: light-arabic.theme  light-cjk-external.theme  light-literata.theme  light-noto-sans.theme  light-noto-serif.theme  light-notosans.theme  light-opendyslexic.theme  light-pt-serif.theme  light-ptserif.theme  light-roboto.theme  light-thai.theme  light-vietnamese.theme
lib/ArabicShaper/: ArabicCharacter.h  ArabicShaper.cpp  ArabicShaper.h  README.md  library.json
lib/AsyncTask/: README.md  library.json
lib/BatteryMonitor/: library.json
lib/Calibre/: library.json
lib/EInkDisplay/: library.json
lib/EpdFont/: EpdFontFamily.h  README.md  StreamingEpdFont.cpp  library.json
lib/Epub/: Epub.cpp  Epub.h  README.md  library.json
lib/ExternalFont/: ExternalFont.h  README.md  library.json
lib/Fb2/: Fb2.cpp  Fb2.h  Fb2Parser.cpp  Fb2Parser.h  README.md  library.json
lib/FsHelpers/: README.md  library.json
lib/GfxRenderer/: BitmapHelpers.cpp  CoverHelpers.cpp  CoverHelpers.h  GfxRenderer.cpp  GfxRenderer.h  README.md  library.json
lib/Group5/: README.md  library.json
lib/Html5/: README.md  library.json
lib/Hyphenation/: ATTRIBUTION.md  HyphenationCommon.cpp  HyphenationCommon.h  Hyphenator.cpp  LanguageRegistry.cpp  LiangHyphenation.h  README.md  library.json
lib/ImageConverter/: README.md  library.json
lib/InflateReader/: InflateReader.h  README.md  library.json
lib/InputManager/: library.json
lib/JpegToBmpConverter/: JpegToBmpConverter.cpp  JpegToBmpConverter.h  README.md  library.json
lib/Logging/: library.json
lib/Markdown/: Markdown.cpp  Markdown.h  MarkdownParser.cpp  MarkdownParser.h  README.md  library.json
lib/OpdsParser/: OpdsParser.cpp  OpdsParser.h
lib/PageCache/: ContentParser.h  EpubChapterParser.cpp  EpubChapterParser.h  PageCache.cpp  PlainTextParser.cpp  PlainTextParser.h  README.md  library.json
lib/PngToBmpConverter/: README.md  library.json
lib/RenderTypes/: README.md  library.json
lib/SDCardManager/: library.json
lib/ScriptDetector/: README.md  ScriptDetector.cpp  library.json
lib/Serialization/: README.md  Serialization.h  library.json
lib/ThaiShaper/: README.md  library.json
lib/Txt/: README.md  Txt.cpp  library.json
lib/Utf8/: README.md  Utf8.h  Utf8Nfc.cpp  library.json
lib/Xtc/: README.md  XtcCoverHelper.cpp  XtcCoverHelper.h  library.json
lib/ZipFile/: README.md  ZipFile.cpp  ZipFile.h  library.json
lib/expat/: README.md  library.json
lib/picojpeg/: README.md  library.json
lib/uzlib/: README.md
scripts/: build_html.py  convert-fonts.mjs  convert_theme_fonts.py  fontconvert.py  generate-font-samples.mjs  generate-nfc-table.py  update-hyphenation.mjs
src/: CacheManager.cpp  CacheManager.h  CrossPointSettings.cpp  CrossPointSettings.h  FontManager.cpp  FontManager.h  IniParser.h  MappedInputManager.cpp  Theme.h  ThemeManager.cpp  WifiCredentialStore.cpp  config.h  main.cpp
src/activities/: Activity.h
src/content/: BookmarkManager.cpp  BookmarkManager.h  ContentHandle.cpp  ContentHandle.h  ContentTypes.cpp  Fb2Provider.cpp  Fb2Provider.h  ProgressManager.cpp  XtcProvider.cpp  XtcProvider.h
src/core/: BootMode.cpp  Core.cpp  Core.h  EventQueue.h  PapyrixSettings.cpp  PapyrixSettings.h  StateMachine.cpp  StateMachine.h  Types.h
src/drivers/: Input.cpp  Input.h  Network.cpp  Network.h
src/html/: FilesPageFooter.html  FilesPageHeader.html  HomePage.html
src/images/: PapyrixLogo 2.h  PapyrixLogo.h
src/network/: CrossPointWebServer.cpp  HttpDownloader.cpp  HttpDownloader.h  PapyrixWebServer.cpp  PapyrixWebServer.h  WifiCredentialStore.cpp
src/opds/: OpdsServerStore.cpp  OpdsServerStore.h
src/rendering/: XtcPageRenderer.cpp
src/states/: CalibreSyncState.cpp  ErrorState.cpp  FileListState.cpp  FileListState.h  HomeState.cpp  NetworkState.cpp  NetworkState.h  ReaderState.cpp  SyncState.h  (+6 more)
test/: CMakeLists.txt
test/mocks/: EInkDisplay.h  Logging.h  SDCardManager.h  SdFat.h  platform_stubs.h
test/unit/arabicshaper/: ArabicShaperTest.cpp
test/unit/bookmark/: BookmarkListViewTest.cpp  JumpToPageViewTest.cpp  ReaderMenuViewTest.cpp  test_BookmarkManager.cpp
test/unit/css/: CssParserTest.cpp
test/unit/epdfont/: EpdFontLoaderStreamingTest.cpp
test/unit/epub/: ChapterHtmlSlimParserTest.cpp  ContentOpfParserTest.cpp  HtmlEntitiesTest.cpp  PageImageRenderTest.cpp  PageTest.cpp  ParsedTextTest.cpp
test/unit/eventqueue/: EventQueueTest.cpp
test/unit/fb2/: Fb2MetaCacheTest.cpp  Fb2MetadataTest.cpp
test/unit/fshelpers/: FsHelpersNormaliseTest.cpp
test/unit/gfxrenderer/: GfxRendererClearAreaTest.cpp  GfxRendererStreamingFontTest.cpp
test/unit/homeview/: ChapterListViewTest.cpp
test/unit/hyphenation/: HyphenationTest.cpp
test/unit/imageconverter/: ImageConvertConfigTest.cpp
test/unit/inflatereader/: InflateReaderTest.cpp
test/unit/input/: MappedInputManagerTest.cpp  PowerButtonHeldTimeTest.cpp
test/unit/logging/: HardwareSerial.h  LoggingTest.cpp
test/unit/markdown/: MarkdownParserExtTest.cpp
test/unit/pagecache/: ContentParserAbortTest.cpp
test/unit/scriptdetector/: ScriptDetectorExtTest.cpp  ScriptDetectorTest.cpp
test/unit/settings/: HasExternalReaderFontTest.cpp  PowerButtonSettingsTest.cpp  SettingsDefaultsTest.cpp  SettingsViewTest.cpp
test/unit/thaishaper/: ThaiShaperTest.cpp
test/unit/utf8/: Utf8CombiningMarkTest.cpp  Utf8NfcTest.cpp
test/unit/webserver/: FsHelpersTest.cpp
test/unit/xtc/: XtcCoverHelperTest.cpp
tools/reader-test/: CMakeLists.txt  main.cpp
tools/reader-test/mocks/: Arduino.h  Bitmap.h  BitmapHelpers.h  CoverHelpers.h  EInkDisplay.h  GfxRenderer.h  ImageConverter.h  LittleFS.h  Print.h  SDCardManager.h  SdFat.h  WString.h  esp_heap_caps.h  platform_stubs.cpp  platform_stubs.h
tools/reader-test/mocks/freertos/: FreeRTOS.h  event_groups.h  semphr.h  task.h
(+317 files in other folders)
